# rmthumbs

./: CMakeLists.txt  README.md  config.in  rmthumbs.c  rmthumbs.h
